# growbox-ml-controller

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  continue_test.md  index.html  package.json  platformio.ini  pyproject.toml  requirements-dev.txt  requirements-lock.txt  sdkconfig.defaults  sdkconfig.defaults.n16r8  sdkconfig.defaults.n32r16v
.github/workflows/: ci.yml  deploy.yml
assets/: chamber-3d-page--pMX2ZDC.js  chamber-3d-page-13WYl8Cn.js  chamber-3d-page-1iEHPvkM.js  chamber-3d-page-B1TM3QY7.js  chamber-3d-page-B8yXn19G.js  chamber-3d-page-B9xiznhs.js  chamber-3d-page-BIpOHqMg.js  chamber-3d-page-BNqEyGa3.js  chamber-3d-page-BOkcE6HT.js  chamber-3d-page-BUbhQ-P7.js  chamber-3d-page-BaYdVWra.js  chamber-3d-page-Bbxuz9RJ.js  chamber-3d-page-BcBC0jDI.js  chamber-3d-page-BgMqPwaU.js  chamber-3d-page-BggEaZr3.js  chamber-3d-page-Bkpsvtnr.js  chamber-3d-page-Bl3RGsTd.js  chamber-3d-page-BoV0qILZ.js  chamber-3d-page-BrUbRMiZ.js  chamber-3d-page-BsgU8OoE.js  chamber-3d-page-Btwvaa9Q.js  chamber-3d-page-BzqYgt5b.js  chamber-3d-page-C3NgVZER.js  chamber-3d-page-C3p1RuQh.js  chamber-3d-page-C47D0vos.js  chamber-3d-page-C8yWOUtj.js  chamber-3d-page-CEcA9ubH.js  chamber-3d-page-CNeDNjfN.js  chamber-3d-page-CUAtktQj.js  chamber-3d-page-Ca1gaVgA.js  chamber-3d-page-CaDpE9tu.js  chamber-3d-page-Caw8Vr4D.js  chamber-3d-page-ClH2CJga.js  chamber-3d-page-CpJ3BDzH.js  chamber-3d-page-CvEGvFr5.js  chamber-3d-page-Cv_YA5Fp.js  chamber-3d-page-DC6BeU4p.js  chamber-3d-page-DEPUlRUn.js  chamber-3d-page-DF13gSDH.js  chamber-3d-page-DF6TERX3.js  (+96 more)
components/emlearn_runtime/: LICENSE  README.md
config/: README.md
config/idf/: sdkconfig.defaults
docs/: ARCHITECTURE.md  CHANGELOG.md  CONFIG_MATRIX.csv  CONFIG_MATRIX.md  DATA_CONTRACT.md  HARDWARE_CONFIGURATOR.md  IO_MAP.md  IO_MAP_v1.md  MODEL_PIPELINE.md  PORTING_TO_LITEGRAPH.md  PROJECT_LAYOUT.md  REPO.md  SCHEMA_V4_FIELD_GUIDE.md  plan.md
docs/examples/: README.md  minimal-single-pot.json
docs/simulator/: CALIBRATION.md  DEPENDENCIES.md  FORMULAS.md  IO_INVENTORY.md  PHYSICS_SCOPE.md  README.md  SLOT_MAP.md  SOURCES.md  TWIN_VIEW.md  VALIDATION.md
examples/scenarios/: all_pots.jsonl  co2_high.jsonl  disabled_actuators.jsonl  invalid-sensor.jsonl  minimal_sensors.jsonl  no-heater.jsonl  no-humidifier.jsonl  nominal-pots.jsonl  nominal.jsonl  overtemperature.jsonl  saturated_soil.jsonl  v3-nominal.jsonl
gate/: check-contract.mjs  check-contract.test.mjs
lib/environment_control/: CMakeLists.txt  library.json
lib/environment_control/src/: EnvironmentController.cpp  EnvironmentController.h  EnvironmentSchema.h  EnvironmentSchemaV2.h  EnvironmentSchemaV3.h  EnvironmentTypes.cpp  EnvironmentTypes.h  FeatureEncoder.cpp  FeatureEncoder.h  ModelRuntime.cpp  ModelRuntime.h  SafetySupervisor.cpp  SafetySupervisor.h
profiles/: example-single-pot.json
schemas/: environment-controller-v1.json  environment-controller-v2.json  environment-controller-v3.json  environment-controller.json
scripts/: check_schema.sh  check_schema_v2.sh  check_schema_v3.sh  fetch_third_party.sh  idf_clang_check.sh  idf_gate_build.sh  quality_gate.sh  quality_gate_push.sh  run_clang_tidy_host.sh  run_idf.sh  run_twin_view.sh  source_idf.sh
src/: CMakeLists.txt  main.cpp
src/demo/: DummyEnvironmentSimulator.cpp  DummyEnvironmentSimulator.h  SerialJsonProtocol.cpp  SerialJsonProtocol.h
src/demo/protocol/: DecisionWireCodec.cpp  DecisionWireCodec.h  DiagnosticsWireCodec.cpp  DiagnosticsWireCodec.h  HeapDiagnostics.cpp  HeapDiagnostics.h  JsonLineWriter.cpp  JsonLineWriter.h  ScenarioWireCodec.cpp  ScenarioWireCodec.h  StatusWireCodec.cpp  StatusWireCodec.h
test/host/: CMakeLists.txt  unity.h
test/test_environment_controller/: test_main.cpp
tests/: conftest.py  test_analysis_tools.py  test_analysis_validation.py  test_board_e2e.py  test_calibration.py  test_config_matrix.py  test_contract.py  test_contract_active.py  test_contract_v2.py  test_contract_v3.py  test_dataset.py  test_dataset_pots.py  test_dataset_v2.py  test_deviations_foresight.py  test_export.py  test_ml_alignment.py  test_panel.py  test_panel_e2e.py  test_panel_fixtures.py  test_panel_hardware_integration.py  test_panel_history.py  test_panel_layout.py  test_panel_sync.py  test_panel_tokens.py  test_panel_validation.py  test_panel_visual.py  test_physics_pots.py  test_physics_van_henten.py  test_profile.py  test_scenario_payload.py  test_simulator.py  test_simulator_heating.py  test_simulator_heating_v3.py  test_simulator_pots.py  test_simulator_v2.py  test_teacher.py  test_teacher_pots.py  test_teacher_v2.py  test_training.py  test_twin_scene.py  (+1 more)
tests/fixtures/: ModelGoldenVectors.h  golden_vectors.json  panel_decision.json
tools/: __init__.py
tools/analysis/: __init__.py  report.py
tools/ml/: __init__.py  alignment.py  board_engine_audit.py  contract.py  (+30 more)
web/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
(+150 files in other folders)
