[project]
name = "growbox-ml-controller-tools"
version = "0.1.0"
description = "Deterministic simulation, training, export, serial, and analysis tools"
requires-python = ">=3.11,<3.12"
license = "MIT"
dependencies = [
  "bitarray==3.9.0",
  "bitstring==4.3.1",
  "cryptography==45.0.7",
  "ecdsa==0.19.2",
  "emlearn==0.23.2",
  "intelhex==2.3.0",
  "jsonschema==4.26.0",
  "keras==3.15.0",
  "numpy==2.4.6",
  "platformio==6.1.19",
  "pyserial==3.5",
  "reedsolo==1.7.0",
  "tensorflow==2.21.0",
]

[project.optional-dependencies]
test = ["pytest==9.1.1"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]
